export const snapshot = {};

snapshot[`model 1`] = `
[
  U {
    raw: {
      else: U {
        raw: {
          create_index: U {
            raw: {
              object: {
                name: "unsorted_media_instance_id",
                source: U {
                  raw: {
                    collection: "character",
                  },
                },
                terms: U {
                  raw: [
                    U {
                      raw: {
                        object: {
                          field: U {
                            raw: [
                              "data",
                              "mediaId",
                            ],
                          },
                        },
                      },
                    },
                    U {
                      raw: {
                        object: {
                          field: U {
                            raw: [
                              "data",
                              "instance",
                            ],
                          },
                        },
                      },
                    },
                  ],
                },
                unique: false,
                values: undefined,
              },
            },
          },
        },
      },
      if: U {
        raw: {
          exists: U {
            raw: {
              index: "unsorted_media_instance_id",
            },
          },
        },
      },
      then: U {
        raw: {
          params: U {
            raw: {
              object: {
                name: "unsorted_media_instance_id",
                source: U {
                  raw: {
                    collection: "character",
                  },
                },
                terms: U {
                  raw: [
                    U {
                      raw: {
                        object: {
                          field: U {
                            raw: [
                              "data",
                              "mediaId",
                            ],
                          },
                        },
                      },
                    },
                    U {
                      raw: {
                        object: {
                          field: U {
                            raw: [
                              "data",
                              "instance",
                            ],
                          },
                        },
                      },
                    },
                  ],
                },
                unique: false,
                values: undefined,
              },
            },
          },
          update: U {
            raw: {
              index: "unsorted_media_instance_id",
            },
          },
        },
      },
    },
  },
]
`;

snapshot[`model 2`] = `
[
  U {
    raw: {
      else: U {
        raw: {
          create_index: U {
            raw: {
              object: {
                name: "characters_instance_id",
                source: U {
                  raw: {
                    collection: "character",
                  },
                },
                terms: U {
                  raw: [
                    U {
                      raw: {
                        object: {
                          field: U {
                            raw: [
                              "data",
                              "id",
                            ],
                          },
                        },
                      },
                    },
                    U {
                      raw: {
                        object: {
                          field: U {
                            raw: [
                              "data",
                              "instance",
                            ],
                          },
                        },
                      },
                    },
                  ],
                },
                unique: true,
                values: undefined,
              },
            },
          },
        },
      },
      if: U {
        raw: {
          exists: U {
            raw: {
              index: "characters_instance_id",
            },
          },
        },
      },
      then: U {
        raw: {
          params: U {
            raw: {
              object: {
                name: "characters_instance_id",
                source: U {
                  raw: {
                    collection: "character",
                  },
                },
                terms: U {
                  raw: [
                    U {
                      raw: {
                        object: {
                          field: U {
                            raw: [
                              "data",
                              "id",
                            ],
                          },
                        },
                      },
                    },
                    U {
                      raw: {
                        object: {
                          field: U {
                            raw: [
                              "data",
                              "instance",
                            ],
                          },
                        },
                      },
                    },
                  ],
                },
                unique: true,
                values: undefined,
              },
            },
          },
          update: U {
            raw: {
              index: "characters_instance_id",
            },
          },
        },
      },
    },
  },
]
`;

snapshot[`model 3`] = `
[
  U {
    raw: {
      else: U {
        raw: {
          create_function: U {
            raw: {
              object: {
                body: U {
                  raw: {
                    query: U {
                      raw: {
                        expr: U {
                          raw: {
                            in: U {
                              raw: {
                                in: U {
                                  raw: {
                                    collection: U {
                                      raw: {
                                        collection: U {
                                          raw: {
                                            var: "matches",
                                          },
                                        },
                                        map: U {
                                          raw: {
                                            expr: U {
                                              raw: {
                                                collection: U {
                                                  raw: {
                                                    from: U {
                                                      raw: {
                                                        after: undefined,
                                                        before: undefined,
                                                        paginate: U {
                                                          raw: {
                                                            var: "match",
                                                          },
                                                        },
                                                        size: 1000,
                                                      },
                                                    },
                                                    select: U {
                                                      raw: [
                                                        "data",
                                                      ],
                                                    },
                                                  },
                                                },
                                                map: U {
                                                  raw: {
                                                    expr: U {
                                                      raw: {
                                                        get: U {
                                                          raw: {
                                                            var: "refOrMatch",
                                                          },
                                                        },
                                                      },
                                                    },
                                                    lambda: "refOrMatch",
                                                  },
                                                },
                                              },
                                            },
                                            lambda: "match",
                                          },
                                        },
                                      },
                                    },
                                    initial: U {
                                      raw: [],
                                    },
                                    reduce: U {
                                      raw: {
                                        expr: U {
                                          raw: {
                                            collection: U {
                                              raw: {
                                                var: "b",
                                              },
                                            },
                                            prepend: U {
                                              raw: {
                                                var: "a",
                                              },
                                            },
                                          },
                                        },
                                        lambda: U {
                                          raw: [
                                            "a",
                                            "b",
                                          ],
                                        },
                                      },
                                    },
                                  },
                                },
                                let: [
                                  {
                                    matches: U {
                                      raw: {
                                        collection: U {
                                          raw: {
                                            var: "mediaIds",
                                          },
                                        },
                                        map: U {
                                          raw: {
                                            expr: U {
                                              raw: {
                                                match: U {
                                                  raw: {
                                                    index: "unsorted_media_instance_id",
                                                  },
                                                },
                                                terms: U {
                                                  raw: [
                                                    U {
                                                      raw: {
                                                        var: "mediaId",
                                                      },
                                                    },
                                                    U {
                                                      raw: {
                                                        from: U {
                                                          raw: {
                                                            var: "instance",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  ],
                                                },
                                              },
                                            },
                                            lambda: "mediaId",
                                          },
                                        },
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                            let: [
                              {
                                guild: U {
                                  raw: {
                                    in: U {
                                      raw: {
                                        else: U {
                                          raw: {
                                            create: U {
                                              raw: {
                                                collection: "guild",
                                              },
                                            },
                                            params: U {
                                              raw: {
                                                object: {
                                                  data: U {
                                                    raw: {
                                                      object: {
                                                        id: U {
                                                          raw: {
                                                            var: "guildId",
                                                          },
                                                        },
                                                        instances: U {
                                                          raw: [],
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                        if: U {
                                          raw: {
                                            is_nonempty: U {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: U {
                                          raw: {
                                            get: U {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: U {
                                          raw: {
                                            match: U {
                                              raw: {
                                                index: "guilds_discord_id",
                                              },
                                            },
                                            terms: U {
                                              raw: {
                                                var: "guildId",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                              {
                                instance: U {
                                  raw: {
                                    in: U {
                                      raw: {
                                        else: U {
                                          raw: {
                                            in: U {
                                              raw: {
                                                var: "createdInstance",
                                              },
                                            },
                                            let: [
                                              {
                                                createdInstance: U {
                                                  raw: {
                                                    create: U {
                                                      raw: {
                                                        collection: "instance",
                                                      },
                                                    },
                                                    params: U {
                                                      raw: {
                                                        object: {
                                                          data: U {
                                                            raw: {
                                                              object: {
                                                                guild: U {
                                                                  raw: {
                                                                    from: U {
                                                                      raw: {
                                                                        var: "guild",
                                                                      },
                                                                    },
                                                                    select: "ref",
                                                                  },
                                                                },
                                                                inventories: U {
                                                                  raw: [],
                                                                },
                                                                main: true,
                                                                packs: U {
                                                                  raw: [],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                              {
                                                updatedGuild: U {
                                                  raw: {
                                                    params: U {
                                                      raw: {
                                                        object: {
                                                          data: U {
                                                            raw: {
                                                              object: {
                                                                instances: U {
                                                                  raw: [
                                                                    U {
                                                                      raw: {
                                                                        from: U {
                                                                          raw: {
                                                                            var: "createdInstance",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                  ],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                    update: U {
                                                      raw: {
                                                        from: U {
                                                          raw: {
                                                            var: "guild",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            ],
                                          },
                                        },
                                        if: U {
                                          raw: {
                                            is_nonempty: U {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: U {
                                          raw: {
                                            get: U {
                                              raw: {
                                                from: U {
                                                  raw: {
                                                    var: "match",
                                                  },
                                                },
                                                select: U {
                                                  raw: [
                                                    0,
                                                  ],
                                                },
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: U {
                                          raw: {
                                            from: U {
                                              raw: {
                                                var: "guild",
                                              },
                                            },
                                            select: U {
                                              raw: [
                                                "data",
                                                "instances",
                                              ],
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                            ],
                          },
                        },
                        lambda: U {
                          raw: [
                            "mediaIds",
                            "guildId",
                          ],
                        },
                      },
                    },
                  },
                },
                name: "find_media",
              },
            },
          },
        },
      },
      if: U {
        raw: {
          exists: U {
            raw: {
              function: "find_media",
            },
          },
        },
      },
      then: U {
        raw: {
          params: U {
            raw: {
              object: {
                body: U {
                  raw: {
                    query: U {
                      raw: {
                        expr: U {
                          raw: {
                            in: U {
                              raw: {
                                in: U {
                                  raw: {
                                    collection: U {
                                      raw: {
                                        collection: U {
                                          raw: {
                                            var: "matches",
                                          },
                                        },
                                        map: U {
                                          raw: {
                                            expr: U {
                                              raw: {
                                                collection: U {
                                                  raw: {
                                                    from: U {
                                                      raw: {
                                                        after: undefined,
                                                        before: undefined,
                                                        paginate: U {
                                                          raw: {
                                                            var: "match",
                                                          },
                                                        },
                                                        size: 1000,
                                                      },
                                                    },
                                                    select: U {
                                                      raw: [
                                                        "data",
                                                      ],
                                                    },
                                                  },
                                                },
                                                map: U {
                                                  raw: {
                                                    expr: U {
                                                      raw: {
                                                        get: U {
                                                          raw: {
                                                            var: "refOrMatch",
                                                          },
                                                        },
                                                      },
                                                    },
                                                    lambda: "refOrMatch",
                                                  },
                                                },
                                              },
                                            },
                                            lambda: "match",
                                          },
                                        },
                                      },
                                    },
                                    initial: U {
                                      raw: [],
                                    },
                                    reduce: U {
                                      raw: {
                                        expr: U {
                                          raw: {
                                            collection: U {
                                              raw: {
                                                var: "b",
                                              },
                                            },
                                            prepend: U {
                                              raw: {
                                                var: "a",
                                              },
                                            },
                                          },
                                        },
                                        lambda: U {
                                          raw: [
                                            "a",
                                            "b",
                                          ],
                                        },
                                      },
                                    },
                                  },
                                },
                                let: [
                                  {
                                    matches: U {
                                      raw: {
                                        collection: U {
                                          raw: {
                                            var: "mediaIds",
                                          },
                                        },
                                        map: U {
                                          raw: {
                                            expr: U {
                                              raw: {
                                                match: U {
                                                  raw: {
                                                    index: "unsorted_media_instance_id",
                                                  },
                                                },
                                                terms: U {
                                                  raw: [
                                                    U {
                                                      raw: {
                                                        var: "mediaId",
                                                      },
                                                    },
                                                    U {
                                                      raw: {
                                                        from: U {
                                                          raw: {
                                                            var: "instance",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  ],
                                                },
                                              },
                                            },
                                            lambda: "mediaId",
                                          },
                                        },
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                            let: [
                              {
                                guild: U {
                                  raw: {
                                    in: U {
                                      raw: {
                                        else: U {
                                          raw: {
                                            create: U {
                                              raw: {
                                                collection: "guild",
                                              },
                                            },
                                            params: U {
                                              raw: {
                                                object: {
                                                  data: U {
                                                    raw: {
                                                      object: {
                                                        id: U {
                                                          raw: {
                                                            var: "guildId",
                                                          },
                                                        },
                                                        instances: U {
                                                          raw: [],
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                        if: U {
                                          raw: {
                                            is_nonempty: U {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: U {
                                          raw: {
                                            get: U {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: U {
                                          raw: {
                                            match: U {
                                              raw: {
                                                index: "guilds_discord_id",
                                              },
                                            },
                                            terms: U {
                                              raw: {
                                                var: "guildId",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                              {
                                instance: U {
                                  raw: {
                                    in: U {
                                      raw: {
                                        else: U {
                                          raw: {
                                            in: U {
                                              raw: {
                                                var: "createdInstance",
                                              },
                                            },
                                            let: [
                                              {
                                                createdInstance: U {
                                                  raw: {
                                                    create: U {
                                                      raw: {
                                                        collection: "instance",
                                                      },
                                                    },
                                                    params: U {
                                                      raw: {
                                                        object: {
                                                          data: U {
                                                            raw: {
                                                              object: {
                                                                guild: U {
                                                                  raw: {
                                                                    from: U {
                                                                      raw: {
                                                                        var: "guild",
                                                                      },
                                                                    },
                                                                    select: "ref",
                                                                  },
                                                                },
                                                                inventories: U {
                                                                  raw: [],
                                                                },
                                                                main: true,
                                                                packs: U {
                                                                  raw: [],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                              {
                                                updatedGuild: U {
                                                  raw: {
                                                    params: U {
                                                      raw: {
                                                        object: {
                                                          data: U {
                                                            raw: {
                                                              object: {
                                                                instances: U {
                                                                  raw: [
                                                                    U {
                                                                      raw: {
                                                                        from: U {
                                                                          raw: {
                                                                            var: "createdInstance",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                  ],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                    update: U {
                                                      raw: {
                                                        from: U {
                                                          raw: {
                                                            var: "guild",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            ],
                                          },
                                        },
                                        if: U {
                                          raw: {
                                            is_nonempty: U {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: U {
                                          raw: {
                                            get: U {
                                              raw: {
                                                from: U {
                                                  raw: {
                                                    var: "match",
                                                  },
                                                },
                                                select: U {
                                                  raw: [
                                                    0,
                                                  ],
                                                },
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: U {
                                          raw: {
                                            from: U {
                                              raw: {
                                                var: "guild",
                                              },
                                            },
                                            select: U {
                                              raw: [
                                                "data",
                                                "instances",
                                              ],
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                            ],
                          },
                        },
                        lambda: U {
                          raw: [
                            "mediaIds",
                            "guildId",
                          ],
                        },
                      },
                    },
                  },
                },
                name: "find_media",
              },
            },
          },
          update: U {
            raw: {
              function: "find_media",
            },
          },
        },
      },
    },
  },
]
`;

snapshot[`model 4`] = `
[
  U {
    raw: {
      else: U {
        raw: {
          create_function: U {
            raw: {
              object: {
                body: U {
                  raw: {
                    query: U {
                      raw: {
                        expr: U {
                          raw: {
                            in: U {
                              raw: {
                                in: U {
                                  raw: {
                                    else: null,
                                    if: U {
                                      raw: {
                                        is_nonempty: U {
                                          raw: {
                                            var: "match",
                                          },
                                        },
                                      },
                                    },
                                    then: U {
                                      raw: {
                                        get: U {
                                          raw: {
                                            var: "match",
                                          },
                                        },
                                      },
                                    },
                                  },
                                },
                                let: [
                                  {
                                    match: U {
                                      raw: {
                                        match: U {
                                          raw: {
                                            index: "characters_instance_id",
                                          },
                                        },
                                        terms: U {
                                          raw: [
                                            U {
                                              raw: {
                                                var: "characterId",
                                              },
                                            },
                                            U {
                                              raw: {
                                                from: U {
                                                  raw: {
                                                    var: "instance",
                                                  },
                                                },
                                                select: "ref",
                                              },
                                            },
                                          ],
                                        },
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                            let: [
                              {
                                guild: U {
                                  raw: {
                                    in: U {
                                      raw: {
                                        else: U {
                                          raw: {
                                            create: U {
                                              raw: {
                                                collection: "guild",
                                              },
                                            },
                                            params: U {
                                              raw: {
                                                object: {
                                                  data: U {
                                                    raw: {
                                                      object: {
                                                        id: U {
                                                          raw: {
                                                            var: "guildId",
                                                          },
                                                        },
                                                        instances: U {
                                                          raw: [],
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                        if: U {
                                          raw: {
                                            is_nonempty: U {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: U {
                                          raw: {
                                            get: U {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: U {
                                          raw: {
                                            match: U {
                                              raw: {
                                                index: "guilds_discord_id",
                                              },
                                            },
                                            terms: U {
                                              raw: {
                                                var: "guildId",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                              {
                                instance: U {
                                  raw: {
                                    in: U {
                                      raw: {
                                        else: U {
                                          raw: {
                                            in: U {
                                              raw: {
                                                var: "createdInstance",
                                              },
                                            },
                                            let: [
                                              {
                                                createdInstance: U {
                                                  raw: {
                                                    create: U {
                                                      raw: {
                                                        collection: "instance",
                                                      },
                                                    },
                                                    params: U {
                                                      raw: {
                                                        object: {
                                                          data: U {
                                                            raw: {
                                                              object: {
                                                                guild: U {
                                                                  raw: {
                                                                    from: U {
                                                                      raw: {
                                                                        var: "guild",
                                                                      },
                                                                    },
                                                                    select: "ref",
                                                                  },
                                                                },
                                                                inventories: U {
                                                                  raw: [],
                                                                },
                                                                main: true,
                                                                packs: U {
                                                                  raw: [],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                              {
                                                updatedGuild: U {
                                                  raw: {
                                                    params: U {
                                                      raw: {
                                                        object: {
                                                          data: U {
                                                            raw: {
                                                              object: {
                                                                instances: U {
                                                                  raw: [
                                                                    U {
                                                                      raw: {
                                                                        from: U {
                                                                          raw: {
                                                                            var: "createdInstance",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                  ],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                    update: U {
                                                      raw: {
                                                        from: U {
                                                          raw: {
                                                            var: "guild",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            ],
                                          },
                                        },
                                        if: U {
                                          raw: {
                                            is_nonempty: U {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: U {
                                          raw: {
                                            get: U {
                                              raw: {
                                                from: U {
                                                  raw: {
                                                    var: "match",
                                                  },
                                                },
                                                select: U {
                                                  raw: [
                                                    0,
                                                  ],
                                                },
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: U {
                                          raw: {
                                            from: U {
                                              raw: {
                                                var: "guild",
                                              },
                                            },
                                            select: U {
                                              raw: [
                                                "data",
                                                "instances",
                                              ],
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                            ],
                          },
                        },
                        lambda: U {
                          raw: [
                            "characterId",
                            "guildId",
                          ],
                        },
                      },
                    },
                  },
                },
                name: "find_character",
              },
            },
          },
        },
      },
      if: U {
        raw: {
          exists: U {
            raw: {
              function: "find_character",
            },
          },
        },
      },
      then: U {
        raw: {
          params: U {
            raw: {
              object: {
                body: U {
                  raw: {
                    query: U {
                      raw: {
                        expr: U {
                          raw: {
                            in: U {
                              raw: {
                                in: U {
                                  raw: {
                                    else: null,
                                    if: U {
                                      raw: {
                                        is_nonempty: U {
                                          raw: {
                                            var: "match",
                                          },
                                        },
                                      },
                                    },
                                    then: U {
                                      raw: {
                                        get: U {
                                          raw: {
                                            var: "match",
                                          },
                                        },
                                      },
                                    },
                                  },
                                },
                                let: [
                                  {
                                    match: U {
                                      raw: {
                                        match: U {
                                          raw: {
                                            index: "characters_instance_id",
                                          },
                                        },
                                        terms: U {
                                          raw: [
                                            U {
                                              raw: {
                                                var: "characterId",
                                              },
                                            },
                                            U {
                                              raw: {
                                                from: U {
                                                  raw: {
                                                    var: "instance",
                                                  },
                                                },
                                                select: "ref",
                                              },
                                            },
                                          ],
                                        },
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                            let: [
                              {
                                guild: U {
                                  raw: {
                                    in: U {
                                      raw: {
                                        else: U {
                                          raw: {
                                            create: U {
                                              raw: {
                                                collection: "guild",
                                              },
                                            },
                                            params: U {
                                              raw: {
                                                object: {
                                                  data: U {
                                                    raw: {
                                                      object: {
                                                        id: U {
                                                          raw: {
                                                            var: "guildId",
                                                          },
                                                        },
                                                        instances: U {
                                                          raw: [],
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                        if: U {
                                          raw: {
                                            is_nonempty: U {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: U {
                                          raw: {
                                            get: U {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: U {
                                          raw: {
                                            match: U {
                                              raw: {
                                                index: "guilds_discord_id",
                                              },
                                            },
                                            terms: U {
                                              raw: {
                                                var: "guildId",
                                              },
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                              {
                                instance: U {
                                  raw: {
                                    in: U {
                                      raw: {
                                        else: U {
                                          raw: {
                                            in: U {
                                              raw: {
                                                var: "createdInstance",
                                              },
                                            },
                                            let: [
                                              {
                                                createdInstance: U {
                                                  raw: {
                                                    create: U {
                                                      raw: {
                                                        collection: "instance",
                                                      },
                                                    },
                                                    params: U {
                                                      raw: {
                                                        object: {
                                                          data: U {
                                                            raw: {
                                                              object: {
                                                                guild: U {
                                                                  raw: {
                                                                    from: U {
                                                                      raw: {
                                                                        var: "guild",
                                                                      },
                                                                    },
                                                                    select: "ref",
                                                                  },
                                                                },
                                                                inventories: U {
                                                                  raw: [],
                                                                },
                                                                main: true,
                                                                packs: U {
                                                                  raw: [],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                              {
                                                updatedGuild: U {
                                                  raw: {
                                                    params: U {
                                                      raw: {
                                                        object: {
                                                          data: U {
                                                            raw: {
                                                              object: {
                                                                instances: U {
                                                                  raw: [
                                                                    U {
                                                                      raw: {
                                                                        from: U {
                                                                          raw: {
                                                                            var: "createdInstance",
                                                                          },
                                                                        },
                                                                        select: "ref",
                                                                      },
                                                                    },
                                                                  ],
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                    update: U {
                                                      raw: {
                                                        from: U {
                                                          raw: {
                                                            var: "guild",
                                                          },
                                                        },
                                                        select: "ref",
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            ],
                                          },
                                        },
                                        if: U {
                                          raw: {
                                            is_nonempty: U {
                                              raw: {
                                                var: "match",
                                              },
                                            },
                                          },
                                        },
                                        then: U {
                                          raw: {
                                            get: U {
                                              raw: {
                                                from: U {
                                                  raw: {
                                                    var: "match",
                                                  },
                                                },
                                                select: U {
                                                  raw: [
                                                    0,
                                                  ],
                                                },
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                    let: [
                                      {
                                        match: U {
                                          raw: {
                                            from: U {
                                              raw: {
                                                var: "guild",
                                              },
                                            },
                                            select: U {
                                              raw: [
                                                "data",
                                                "instances",
                                              ],
                                            },
                                          },
                                        },
                                      },
                                    ],
                                  },
                                },
                              },
                            ],
                          },
                        },
                        lambda: U {
                          raw: [
                            "characterId",
                            "guildId",
                          ],
                        },
                      },
                    },
                  },
                },
                name: "find_character",
              },
            },
          },
          update: U {
            raw: {
              function: "find_character",
            },
          },
        },
      },
    },
  },
]
`;
